Fixing issue with java.nio.file.Path.of which was introduced in java 11. Now replaced by Paths.get which works since Java 7